@@ -10,7 +10,7 @@ Contributors (alphabetically ordered):
     * Brian Hammond: patches for Demos
     * Codemattic: patches for CocosNode, MenuItemFont
     * effervens: patches for Director
-	* Fradj Johann: patches for CocosNode
+	* Fradj Johann: patches for CocosNode, Layer
     * Ishaq Malik: patches for CocosNode
     * lukeman: patches for MenuItem
 	* Mitch: patches for Menu
